# pagbank-cli

./: .gitignore  CHANGELOG.md  CONVENTIONS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  errors.rs  main.rs  output.rs  pix.rs
cli/src/commands/: accounts.rs  auth.rs  certs.rs  checkouts.rs  clubpag.rs  config_cmd.rs  connect.rs  coupons.rs  invoices.rs  keys.rs  mod.rs  orders.rs  plans.rs  subscribers.rs  subscriptions.rs
docs/: api-pagbank.md  linkedin-post.md
scripts/: pre-push  release.sh
sdk/: .gitkeep  Cargo.toml  README.md
sdk/src/: client.rs  config.rs  error.rs  lib.rs
sdk/src/endpoints/: accounts.rs  certificates.rs  charges.rs  checkouts.rs  clubpag.rs  connect.rs  coupons.rs  invoices.rs  mod.rs  orders.rs  plans.rs  preferences.rs  public_keys.rs  retries.rs  subscribers.rs  subscriptions.rs
sdk/src/models/: account.rs  certificate.rs  charge.rs  checkout.rs  clubpag.rs  common.rs  connect.rs  coupon.rs  invoice.rs  mod.rs  order.rs  plan.rs  public_key.rs  subscriber.rs  subscription.rs
