[workspace]
resolver = "2"
members = ["sdk", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Vinycius"]
repository = "https://github.com/vinycius/pagbank-cli"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
url = "2"
