[workspace]
resolver = "2"
members = ["sdk", "cli"]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Vinycius"]
repository = "https://github.com/vinycius/pagbank-cli"

[workspace.dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = ["full"] }
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.24.0", features = ["v4"] }
thiserror = "2.0.19"
url = "2.5.8"
