[package]
name = "pagbank-sdk"
description = "SDK Rust para as APIs do PagBank"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["pagbank", "pagseguro", "sdk", "payments", "brasil"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
url.workspace = true
secrecy = "0.10"
urlencoding = "2"
