[package]
name = "pagbank-sdk"
description = "SDK Rust para as APIs do PagBank"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/vinycalves/pagbank-cli"
documentation = "https://docs.rs/pagbank-sdk"
readme = "README.md"
keywords = ["pagbank", "pagseguro", "sdk", "payments", "brasil"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.13.4", features = ["json", "rustls"], default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
url.workspace = true
secrecy = "0.10.3"
urlencoding = "2.1.3"
